--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
   <TITLE>VCLog</TITLE>
-  <link REL="SHORTCUT ICON" HREF="assets/images/logo.jpg"/>
+  <link REL="SHORTCUT ICON" HREF="assets/logo.jpg"/>
   <style>
     html { font-size: 12px; }
     body {
