--- a/rdoc/HISTORY_rdoc.html
+++ b/rdoc/HISTORY_rdoc.html
@@ -46,7 +46,7 @@
       <h3 class="section-header">File Stats</h3>
       <dl>
         <dt class="modified-date">Last Modified</dt>
-        <dd class="modified-date">Wed Jun 23 23:51:24 -0400 2010</dd>
+        <dd class="modified-date">Sun Jun 27 14:06:18 -0400 2010</dd>
 
         
 
@@ -1078,7 +1078,7 @@
       <div style="float: right; margin-right: 5px;">
         <a href="http://validator.w3.org/check/referer"><img src="./assets/icon/check.png" alt="[Validate]" height="16" width="16" /></a>
       </div>
-      Generated with <a href="http://proutils.github.com/webri">WebRI Redfish</a> 1.2.1
+      Generated with <a href="http://rubyworks.github.com/rdazzle">RDazzle Redfish</a> 1.3.0
       <br/><br/>
     </div>
   </div>
@@ -1096,6 +1096,28 @@
 
   <div id="documentation">
     <h1>RELEASE HISTORY</h1>
+<h2>1.7.0 / 2010-06-27</h2>
+<p>
+In this release the heuristics interface has changed such that the block is
+passed the commit message and the matchdata, instead of  the previous
+matchdata splat. The rule can alos return either the sybolic label or a two
+element array of label and new message, which allows the rule to
+&#8220;massage&#8221; the message as needed. This release also improves the
+git log parser to be much more robust. 
+</p>
+<p>
+Changes:
+</p>
+<ul>
+<li><p>
+Pass message and matchadata to heuristics rule interface.
+</p>
+</li>
+<li><p>
+Improve git log parser, which should handle all possible cases now.
+</p>
+</li>
+</ul>
 <h2>1.6.1 / 2010-06-23</h2>
 <p>
 This release repairs the Atom feed format and adds an RSS feed format. Both
