--- a/rdoc/README_rdoc.html
+++ b/rdoc/README_rdoc.html
@@ -46,7 +46,7 @@
       <h3 class="section-header">File Stats</h3>
       <dl>
         <dt class="modified-date">Last Modified</dt>
-        <dd class="modified-date">Tue Jun 22 01:23:06 -0400 2010</dd>
+        <dd class="modified-date">Sun Jun 27 14:21:12 -0400 2010</dd>
 
         
 
@@ -1078,7 +1078,7 @@
       <div style="float: right; margin-right: 5px;">
         <a href="http://validator.w3.org/check/referer"><img src="./assets/icon/check.png" alt="[Validate]" height="16" width="16" /></a>
       </div>
-      Generated with <a href="http://proutils.github.com/webri">WebRI Redfish</a> 1.2.1
+      Generated with <a href="http://rubyworks.github.com/rdazzle">RDazzle Redfish</a> 1.3.0
       <br/><br/>
     </div>
   </div>
@@ -1114,22 +1114,92 @@ href="http://github.com/proutils/vclog">github.com/proutils/vclog</a>
 generator. It currently supports Git, Hg and (limited) Subversion.
 </p>
 <h2>SYNOPSIS</h2>
+<h3>Creating Changelogs</h3>
 <p>
-The default format is a ANSI colored GNU-like text style. From a
+The default output is a ANSI colored GNU-like changelog. From a
 repository&#8217;s root directory try:
 </p>
 <pre>
   $ vclog
 </pre>
 <p>
-To generate an XML formatted changelog use:
+The is the same as specifying &#8216;changelog&#8217; or &#8216;log&#8217;.
+</p>
+<pre>
+  $ vclog log
+</pre>
+<p>
+To generate an a different format use -f:
 </p>
 <pre>
   $ vclog -f xml
 </pre>
+<h3>Creating Release Histories</h3>
+<p>
+To get a release history specify &#8216;history&#8217; or
+&#8216;release&#8217; as the subcommand.
+</p>
+<pre>
+  $ vclog history
+</pre>
+<p>
+Again the default format is a ANSI colored GNU-like text style.
+</p>
+<p>
+Unlike Changelogs, Histories group changes by tags. The tag message is used
+as the release note. If the underlying SCM doesn&#8217;t support  tag
+messages that the last commit message before the tag is used.
+</p>
 <p>
 See &#8216;vclog help&#8217; for more options.
 </p>
+<h3>Bumping Versions</h3>
+<p>
+<a href="VCLog.html">VCLog</a> can also be used to intelligently bump
+versions. To see the current tag version:
+</p>
+<pre>
+  $ vclog version
+  1.1.0
+</pre>
+<p>
+To see the next reasonable version based on current changes:
+</p>
+<pre>
+  $ vclog bump
+  1.2.0
+</pre>
+<p>
+<a href="VCLog.html">VCLog</a> can determine the appropriate version based
+on commit level. Any commit with a level greater than 1 will bump the major
+number, while any commit with a level of 0 or 1 will bump the minor number.
+All lower level only bump the patch level.
+</p>
+<h3>Writing Heuristics</h3>
+<p>
+In your projects .vclog/rules.rb or .config/vclog/rules.rb file, you can
+create rules for labeling commit messages bassed on commit message.
+</p>
+<pre>
+  on /updated? (README|VERSION|MANIFEST)/ do
+    :admin
+  end
+</pre>
+<p>
+These rules can a also &#8220;massage&#8221; the commit message for output.
+</p>
+<pre>
+  on /^admin:/ do |matchdata|
+    [:admin, matchdate.post_match]
+  end
+</pre>
+<p>
+Labels are used to categorize and assign levels to commits. Use # in the
+rules.rb to specify the level and description of a commit label.
+</p>
+<pre>
+  set :admin, -2, &quot;Administrative Adjustment&quot;
+</pre>
 <h2>NOTE ABOUT SUBVSERION</h2>
 <p>
 Because Subversion is a centralized version control system, it contacts the
