--- a/rdoc/VCLog/Formatter.html
+++ b/rdoc/VCLog/Formatter.html
@@ -261,7 +261,7 @@
       <div style="float: right; margin-right: 5px;">
         <a href="http://validator.w3.org/check/referer"><img src="../assets/icon/check.png" alt="[Validate]" height="16" width="16" /></a>
       </div>
-      Generated with <a href="http://github.com/proutils/webri">WebRI Redfish</a> 1.2.1
+      Generated with <a href="http://rubyworks.github.com/rdazzle">RDazzle Redfish</a> 1.3.0
       <br/><br/>
     </div>
   </div>
@@ -434,7 +434,7 @@ Returns a Changelog object taken from the VCS.
 85: 
 86:       <span class="ruby-keyword kw">case</span> <span class="ruby-constant">File</span>.<span class="ruby-identifier">extname</span>(<span class="ruby-identifier">tmp_file</span>)
 87:       <span class="ruby-keyword kw">when</span> <span class="ruby-value str">'.rb'</span>
-88:         <span class="ruby-identifier">eval</span>(<span class="ruby-identifier">tmp</span>, <span class="ruby-identifier">binding</span>)
+88:         <span class="ruby-identifier">eval</span>(<span class="ruby-identifier">tmp</span>, <span class="ruby-identifier">binding</span>, <span class="ruby-identifier">tmp_file</span>)
 89:       <span class="ruby-keyword kw">when</span> <span class="ruby-value str">'.erb'</span>
 90:         <span class="ruby-identifier">erb</span> = <span class="ruby-constant">ERB</span>.<span class="ruby-identifier">new</span>(<span class="ruby-identifier">tmp</span>, <span class="ruby-keyword kw">nil</span>, <span class="ruby-value str">'&lt;&gt;'</span>)
 91:         <span class="ruby-identifier">erb</span>.<span class="ruby-identifier">result</span>(<span class="ruby-identifier">binding</span>)
