--- a/rdoc/lib/vclog/cli/history_rb.html
+++ b/rdoc/lib/vclog/cli/history_rb.html
@@ -46,7 +46,7 @@
       <h3 class="section-header">File Stats</h3>
       <dl>
         <dt class="modified-date">Last Modified</dt>
-        <dd class="modified-date">Mon Jun 21 20:36:05 -0400 2010</dd>
+        <dd class="modified-date">Sun Jun 27 14:24:32 -0400 2010</dd>
 
         
         <dt class="requires">Requires</dt>
@@ -1087,7 +1087,7 @@
       <div style="float: right; margin-right: 5px;">
         <a href="http://validator.w3.org/check/referer"><img src="../../../assets/icon/check.png" alt="[Validate]" height="16" width="16" /></a>
       </div>
-      Generated with <a href="http://proutils.github.com/webri">WebRI Redfish</a> 1.2.1
+      Generated with <a href="http://rubyworks.github.com/rdazzle">RDazzle Redfish</a> 1.3.0
       <br/><br/>
     </div>
   </div>
