admin: update project organization

--- a/site/index.html
+++ b/site/index.html
@@ -39,7 +39,7 @@
 <div class="nav">
   <div class="menu">
     <a href="http://rubygems.org/gems/vclog">Gem</a> &nbsp;&nbsp;
-    <a href="rdoc/index.html">API</a> &nbsp;&nbsp;
+    <a href="docs/api/index.html">API</a> &nbsp;&nbsp;
     <!-- <a href="qedoc/index.html">QEDocs</a> &nbsp;&nbsp; -->
     <a href="http://googlegroups.com/group/proutils">Forum</a> &nbsp;&nbsp;
     <a href="http://wiki.github.com/proutils/vclog">Wiki</a> &nbsp;&nbsp;
