admin: update website to point to doc instead of docs

--- a/site/index.html
+++ b/site/index.html
@@ -39,9 +39,10 @@
 <div class="nav">
   <div class="menu">
     <a href="http://rubygems.org/gems/vclog">Gem</a> &nbsp;&nbsp;
-    <a href="docs/api/index.html">API</a> &nbsp;&nbsp;
+    <a href="doc/api/index.html">API</a> &nbsp;&nbsp;
+    <a href="doc/man/vclog.1.html">Manual</a> &nbsp;&nbsp;
     <!-- <a href="qedoc/index.html">QEDocs</a> &nbsp;&nbsp; -->
-    <a href="http://googlegroups.com/group/proutils">Forum</a> &nbsp;&nbsp;
+    <a href="http://googlegroups.com/group/rubyworks-mailinglist">Forum</a> &nbsp;&nbsp;
     <a href="http://wiki.github.com/proutils/vclog">Wiki</a> &nbsp;&nbsp;
     <a href="http://github.com/proutils/vclog/issues">Issue</a> &nbsp;&nbsp;
     <a href="http://github.com/proutils/vclog">Code</a> &nbsp;&nbsp;
