--- a/man/vclog-autotag.1.html
+++ b/man/vclog-autotag.1.html
@@ -89,8 +89,15 @@ the version control system.</p>
 <h2 id="OPTIONS">OPTIONS</h2>
 
 <ul>
-<li><code>--force</code>, <code>-f</code>
-Creatie tags without asking for confirmation.</li>
+<li><p><code>--force</code>, <code>-y</code>
+Create tags without asking for confirmation.</p></li>
+<li><p><code>--prefix</code>, <code>-p PREFIX</code>
+Specify a prefix to add to version tags. Typically
+this will be the letter 'v'.</p></li>
+<li><p><code>--file</code>, <code>-f FILE</code>
+Specify a specific history file to use. This is useful
+is the history file does not conform to the usual naming
+convention of <code>HISTORY.*</code>.</p></li>
 </ul>
 
 
