--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
     .foot { padding: 40px 0 0 0; text-align: center; margin: 0 auto; width: 800px; }
     .foot p { color: #552200; text-align: center; font-size: 1em; }
-    .examples li { font-family: monospace; }
+    .examples ul { list-style-type: none; }
+    .examples li { font-family: monospace; float: left; }
   </style>
 
   <script>
@@ -75,7 +76,21 @@
 
   <p style="line-height: 2em;">Ah, the world of changes. Always changing things are. And keeping track of changes can be quite the challenge.
   Thankfully we have version control systems to make the chore a bit easier. But review these changes and we find
-  our output options limited. That's were VCLog comes in. &nbsp; <a href="javascript: $('#toggle').toggle();">Learn More...</a></p>
+  our output options limited. That's were VCLog comes in. &nbsp; <a href="http://wiki.github.com/rubyworks/vclog">Learn More...</a></p>
+
+  <ul class="examples">
+    <li>Examples:</li>
+    <li><a href="eg/changes.rdoc">Changes.rdoc</a></li>
+    <li><a href="eg/changes.html">Changes.html</a></li>
+    <li><a href="eg/changelog.atom">Changes.atom</a></li>
+    <li><a href="eg/changelog.rss">Changes.rss</a></li>
+    <li><a href="eg/history.rdoc">History.rdoc</a></li>
+    <li><a href="eg/history.html">History.html</a></li>
+    <li><a href="eg/history.atom">History.atom</a></li>
+    <li><a href="eg/history.rss">History.rss</a></li>
+  </ul>
+
+  <br style="clear: both;" />
 
 <div id="toggle" style="display: none;">
 
@@ -241,9 +256,9 @@
 
 <div class="foot">
   <script type="text/javascript"><!--
-  google_ad_client = "pub-1126154564663472";
-  /* PROUTILS 09-10-14 728x90 */
-  google_ad_slot = "0711173189";
+  google_ad_client = "ca-pub-1126154564663472";
+  /* RUBYWORKS 09-10-02 728x90 */
+  google_ad_slot = "0788888658";
   google_ad_width = 728;
   google_ad_height = 90;
   //-->
