--- a/man/vclog.1.html
+++ b/man/vclog.1.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv='content-type' value='text/html;charset=utf8'>
   <meta name='generator' value='Ronn/v0.7.3 (http://github.com/rtomayko/ronn/tree/0.7.3)'>
-  <title>vclog(1) - version control logging utility</title>
+  <title>vclog(1) - version control logs</title>
   <style type='text/css' media='all'>
   /* style: man */
   body#manpage {margin:0}
@@ -62,7 +62,7 @@
     <a href="#NAME">NAME</a>
     <a href="#SYNOPSIS">SYNOPSIS</a>
     <a href="#DESCRIPTION">DESCRIPTION</a>
-    <a href="#COMMANDS">COMMANDS</a>
+    <a href="#OPTIONS">OPTIONS</a>
     <a href="#SEE-ALSO">SEE ALSO</a>
     </div>
 
@@ -74,46 +74,55 @@
 
   <h2 id="NAME">NAME</h2>
 <p class="man-name">
-  <code>vclog</code> - <span class="man-whatis">version control logging utility</span>
+  <code>vclog</code> - <span class="man-whatis">version control logs</span>
 </p>
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p><code>vclog [command]</code></p>
+<p><code>vclog [options]</code></p>
 
 <h2 id="DESCRIPTION">DESCRIPTION</h2>
 
-<p>VCLog is a versitle cross-VCS/SCM changelog generator.
+<p>VCLog is a versitle cross-VCS/SCM changelog and release history generator.
 It currently supports Git, Hg and (limited) Subversion.</p>
 
-<h2 id="COMMANDS">COMMANDS</h2>
+<h2 id="OPTIONS">OPTIONS</h2>
 
-<p>VCLog provides a number of useful functions:</p>
+<p>Note that not all formats support all options, and some formats use them
+in variant manners.</p>
 
 <ul>
-<li><p><code>changelog</code>
-Produce a Change Log.</p></li>
-<li><p><code>history</code>
-Produce a Release History.</p></li>
-<li><p><code>version</code>
-Show current tag version.</p></li>
-<li><p><code>bump</code>
-Suggest next tag version.</p></li>
-<li><p><code>autotag</code>
-Ensure a tag exists for each History entry.</p></li>
+<li><p><code>-f</code>, <code>--format &lt;FORMAT></code>
+Output format (ansi, rdoc, html, etc.)</p></li>
+<li><p><code>--style &lt;URI></code>
+Provide a stylesheet URI, either css or xsl, for HTML or XML formats.</p></li>
+<li><p><code>-d</code>, <code>--detail</code>
+Include commit message details.</p></li>
+<li><p><code>-p</code>, <code>--point</code>
+Divide commit messages into commit points.</p></li>
+<li><p><code>-v</code>, <code>--version &lt;VERSION></code>
+Use as current version number.</p></li>
+<li><p><code>-t</code>, <code>--title TITLE</code>
+Document title (for format that supports it).</p></li>
+<li><p><code>-s</code>, `--summary
+Omit change points. (Applies only to release history report.)</p></li>
+<li><p><code>i</code>, <code>--id</code>
+Include revision/reference ids. (Does not apply to xml/html formats.)</p></li>
+<li><p><code>-l</code>, <code>--level &lt;NUMBER></code>
+Lowest level of commit to display, default is <code>0</code>.</p></li>
 </ul>
 
 
-<p>Both <code>changelog</code> and <code>history</code> can be produced in a variety of formats.</p>
+<p>Both changelog and release history can be produced in a variety of formats.</p>
 
 <h2 id="SEE-ALSO">SEE ALSO</h2>
 
-<p><a href="vclog-changelog.1.html" class="man-ref">vclog-changelog<span class="s">(1)</span></a>, <a href="vclog-history.1.html" class="man-ref">vclog-history<span class="s">(1)</span></a>, <a href="vclog-version.1.html" class="man-ref">vclog-version<span class="s">(1)</span></a>, <a href="vclog-bump.1.html" class="man-ref">vclog-bump<span class="s">(1)</span></a>, <a href="vclog-autotag.1.html" class="man-ref">vclog-autotag<span class="s">(1)</span></a></p>
+<p><a href="vclog-version.1.html" class="man-ref">vclog-version<span class="s">(1)</span></a>, <a href="vclog-bump.1.html" class="man-ref">vclog-bump<span class="s">(1)</span></a>, <a href="vclog-autotag.1.html" class="man-ref">vclog-autotag<span class="s">(1)</span></a></p>
 
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>RubyWorks</li>
-    <li class='tc'>November 2010</li>
+    <li class='tc'>December 2011</li>
     <li class='tr'>vclog(1)</li>
   </ol>
 
