Update examples and man pages.

--- a/man/vclog-bump.1.html
+++ b/man/vclog-bump.1.html
@@ -64,7 +64,7 @@
     <a href="#DESCRIPTION">DESCRIPTION</a>
     <a href="#OPTIONS">OPTIONS</a>
     <a href="#SEE-ALSO">SEE ALSO</a>
-    </div>
+  </div>
 
   <ol class='man-decor man-head man head'>
     <li class='tl'>vclog-bump(1)</li>
@@ -97,7 +97,7 @@ Assume this version number is current.</li>
 
 <h2 id="SEE-ALSO">SEE ALSO</h2>
 
-<p><a href="vclog.1.html" class="man-ref">vclog<span class="s">(1)</span></a></p>
+<p><a class="man-ref" href="vclog.1.html">vclog<span class="s">(1)</span></a></p>
 
 
   <ol class='man-decor man-foot man foot'>
