--- a/man/vclog-version.1.html
+++ b/man/vclog-version.1.html
@@ -63,7 +63,7 @@
     <a href="#SYNOPSIS">SYNOPSIS</a>
     <a href="#DESCRIPTION">DESCRIPTION</a>
     <a href="#SEE-ALSO">SEE ALSO</a>
-    </div>
+  </div>
 
   <ol class='man-decor man-head man head'>
     <li class='tl'>vclog-version(1)</li>
@@ -86,7 +86,7 @@
 
 <h2 id="SEE-ALSO">SEE ALSO</h2>
 
-<p><a href="vclog.1.html" class="man-ref">vclog<span class="s">(1)</span></a></p>
+<p><a class="man-ref" href="vclog.1.html">vclog<span class="s">(1)</span></a></p>
 
 
   <ol class='man-decor man-foot man foot'>
