--- a/man/vclog-news.1.html
+++ b/man/vclog-news.1.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv='content-type' value='text/html;charset=utf8'>
   <meta name='generator' value='Ronn/v0.7.3 (http://github.com/rtomayko/ronn/tree/0.7.3)'>
-  <title>vclog(1) - version control logs</title>
+  <title>vclog-news(1) - output latest release notice</title>
   <style type='text/css' media='all'>
   /* style: man */
   body#manpage {margin:0}
@@ -67,63 +67,44 @@
   </div>
 
   <ol class='man-decor man-head man head'>
-    <li class='tl'>vclog(1)</li>
+    <li class='tl'>vclog-news(1)</li>
     <li class='tc'>VCLog</li>
-    <li class='tr'>vclog(1)</li>
+    <li class='tr'>vclog-news(1)</li>
   </ol>
 
   <h2 id="NAME">NAME</h2>
 <p class="man-name">
-  <code>vclog</code> - <span class="man-whatis">version control logs</span>
+  <code>vclog-news</code> - <span class="man-whatis">output latest release notice</span>
 </p>
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p><code>vclog [options]</code></p>
+<p><code>vclog news</code></p>
 
 <h2 id="DESCRIPTION">DESCRIPTION</h2>
 
-<p>VCLog is a versitle cross-VCS/SCM changelog and release history generator.
-It currently supports Git, Hg and (limited) Subversion.</p>
+<p>Display the most recent entry in a project's history file. This command
+does NOT show the latest tag message, rather it is useful for making
+a new tag. For instnace:</p>
+
+<p>  <code>vclog news | git tag -a -F - v1.0.0</code></p>
+
+<p>This command will create a new git tag using the most recent message in
+the history file.</p>
 
 <h2 id="OPTIONS">OPTIONS</h2>
 
-<p>Note that not all formats support all options, and some formats use them
-in variant manners.</p>
-
-<ul>
-<li><p><code>-f</code>, <code>--format &lt;FORMAT></code>
-Output format (ansi, rdoc, html, etc.)</p></li>
-<li><p><code>--style &lt;URI></code>
-Provide a stylesheet URI, either css or xsl, for HTML or XML formats.</p></li>
-<li><p><code>-d</code>, <code>--detail</code>
-Include commit message details.</p></li>
-<li><p><code>-p</code>, <code>--point</code>
-Divide commit messages into commit points.</p></li>
-<li><p><code>-v</code>, <code>--version &lt;VERSION></code>
-Use as current version number.</p></li>
-<li><p><code>-t</code>, <code>--title TITLE</code>
-Document title (for format that supports it).</p></li>
-<li><p><code>-s</code>, `--summary
-Omit change points. (Applies only to release history report.)</p></li>
-<li><p><code>i</code>, <code>--id</code>
-Include revision/reference ids. (Does not apply to xml/html formats.)</p></li>
-<li><p><code>-l</code>, <code>--level &lt;NUMBER></code>
-Lowest level of commit to display, default is <code>0</code>.</p></li>
-</ul>
-
-
-<p>Both changelog and release history can be produced in a variety of formats.</p>
+<p>No options yet.</p>
 
 <h2 id="SEE-ALSO">SEE ALSO</h2>
 
-<p><a class="man-ref" href="vclog-version.1.html">vclog-version<span class="s">(1)</span></a>, <a class="man-ref" href="vclog-bump.1.html">vclog-bump<span class="s">(1)</span></a>, <a class="man-ref" href="vclog-autotag.1.html">vclog-autotag<span class="s">(1)</span></a></p>
+<p><a class="man-ref" href="vclog.1.html">vclog<span class="s">(1)</span></a></p>
 
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>RubyWorks</li>
-    <li class='tc'>December 2011</li>
-    <li class='tr'>vclog(1)</li>
+    <li class='tc'>March 2012</li>
+    <li class='tr'>vclog-news(1)</li>
   </ol>
 
   </div>
