--- a/man/vclog-autotag.1.html
+++ b/man/vclog-autotag.1.html
@@ -79,7 +79,7 @@
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p><code>vclog autotag</code></p>
+<p><code>vclog-autotag</code></p>
 
 <h2 id="DESCRIPTION">DESCRIPTION</h2>
 
@@ -108,7 +108,7 @@ convention of <code>HISTORY.*</code>.</p></li>
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>RubyWorks</li>
-    <li class='tc'>December 2011</li>
+    <li class='tc'>March 2012</li>
     <li class='tr'>vclog-autotag(1)</li>
   </ol>
 
