--- a/man/vclog-bump.1.html
+++ b/man/vclog-bump.1.html
@@ -79,7 +79,7 @@
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p><code>vclog bump</code></p>
+<p><code>vclog-bump</code></p>
 
 <h2 id="DESCRIPTION">DESCRIPTION</h2>
 
@@ -102,7 +102,7 @@ Assume this version number is current.</li>
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>RubyWorks</li>
-    <li class='tc'>December 2011</li>
+    <li class='tc'>March 2012</li>
     <li class='tr'>vclog-bump(1)</li>
   </ol>
 
