--- a/man/vclog-news.1.html
+++ b/man/vclog-news.1.html
@@ -79,7 +79,7 @@
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p><code>vclog news</code></p>
+<p><code>vclog-news</code></p>
 
 <h2 id="DESCRIPTION">DESCRIPTION</h2>
 
@@ -87,7 +87,7 @@
 does NOT show the latest tag message, rather it is useful for making
 a new tag. For instnace:</p>
 
-<p>  <code>vclog news | git tag -a -F - v1.0.0</code></p>
+<p>  <code>vclog-news | git tag -a -F - v1.0.0</code></p>
 
 <p>This command will create a new git tag using the most recent message in
 the history file.</p>
