--- a/man/vclog-version.1.html
+++ b/man/vclog-version.1.html
@@ -78,7 +78,7 @@
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p><code>vclog version</code></p>
+<p><code>vclog-version</code></p>
 
 <h2 id="DESCRIPTION">DESCRIPTION</h2>
 
@@ -91,7 +91,7 @@
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>RubyWorks</li>
-    <li class='tc'>December 2011</li>
+    <li class='tc'>March 2012</li>
     <li class='tr'>vclog-version(1)</li>
   </ol>
 
